# market_watch

./: .cursorignore  .cursorrules  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: dash-pages.mdc  market-watch-core.mdc  tests.mdc
app/: __init__.py  config.py  dashboard.py  main.py  metrics.py  models.py  routing.py
app/components/: __init__.py  charts.py  layout.py  primitives.py  tables.py  theme.py  ui.py
app/data/: bitcoin_client.py  cache.py  defeatbeta_client.py  yfinance_client.py
app/pages/: __init__.py  implementation.py  market_watch.py  markets.py  overview.py  signals.py  ticker_detail.py  watchlist.py
app/services/: kiss_portfolio.py  kiss_regime.py  market_snapshot.py  regime_frame.py  regime_history.py  signals.py  vams.py  watchlist_snapshot.py
assets/: theme.css
config/: settings.yaml  watchlist.yaml
docs/: README.md  architecture.md  configuration.md  data-and-caching.md  development.md  routing-and-pages.md  testing.md
tests/: routing_fake.py  test_bitcoin_client.py  test_cache.py  test_config.py  test_config_cache.py  test_coverage_gaps.py  test_dashboard.py  test_defeatbeta_client.py  test_kiss_portfolio.py  test_kiss_regime.py  test_main.py  test_market_snapshot.py  test_metrics.py  test_pages.py  test_pages_extra.py  test_regime_history.py  test_routing.py  test_services_branches.py  test_signals.py  test_theme.py  test_ui_branches.py  test_vams.py  test_watchlist_service.py  test_yfinance_client.py
