[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-watch-dashboard"
version = "0.1.0"
description = "Local-first KISS regime and market-indicators dashboard built with Dash and yfinance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dash>=2.18.2",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "PyYAML>=6.0.2",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.0",
  "coverage[toml]>=7.6.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.components",
  "app.data",
  "app.pages",
  "app.services",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-n", "auto",
  "--cov=app",
  "--cov-branch",
  "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
show_missing = true
